--- a/Fruit.xaml
+++ b/Fruit.xaml
@@ -5,19 +5,29 @@
     <Grid HorizontalAlignment="Left" Height="960" Margin="10,-16,-4,-4" VerticalAlignment="Top" Width="1280">
         <Canvas x:Name="canvas1" HorizontalAlignment="Center" Height="960" Margin="-10,35,0,-35" VerticalAlignment="Center" Width="1280">
             <Image x:Name="Screen" Height="960" Width="1280" Canvas.Top="10"/>
-            <Image x:Name="Background1" Height="960" Width="1320" Canvas.Top="10" Source="Images/bg.png" Canvas.Left="-10"/>
-            <Image x:Name="Background2" Height="960" Width="1320" Source="Images/bg_cloud.png" Canvas.Top="-155" Canvas.Left="-10" />
-            <Image x:Name="SungHwa" Height="360" Canvas.Left="1000" Canvas.Top="590" Width="245" Source="Images/sung_basket.png"/>
-            <Image x:Name="Hand" Height="110" Canvas.Left="1145" Width="125" Source="Images/Hand.png" Canvas.Top="35"/>
-            <TextBox x:Name="Score" Height="160" Canvas.Left="983" TextWrapping="Wrap" Canvas.Top="35" Width="265" FontSize="120" Background="Transparent" FontFamily="Yj CHMSOOT Bold" FontWeight="Bold"/>
-            <Image x:Name="Replay" Height="165" Canvas.Left="680" Canvas.Top="440" Width="180" RenderTransformOrigin="0.472,0.058"/>
-            <Image x:Name="Home" Height="165" Canvas.Left="460" Canvas.Top="440" Width="180"/>
-            <Image x:Name="Ready" HorizontalAlignment="Left" Height="165" VerticalAlignment="Top" Width="390" Canvas.Left="510" Canvas.Top="315"/>
+            <Image x:Name="Background1" Height="960" Width="1365" Canvas.Top="10" Canvas.Left="-35"/>
+            <Image x:Name="Background2" Height="960" Width="1365" Canvas.Top="-155" Canvas.Left="-35" />
+            <Image x:Name="SungHwa" Height="360" Canvas.Left="1003" Canvas.Top="580" Width="245"/>
+            <Image x:Name="Hand" Height="110" Canvas.Left="1145" Width="125" Canvas.Top="35"/>
+
+            <Image x:Name="Ready" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="510" Canvas.Top="315"/>
             <Image x:Name="Go" HorizontalAlignment="Left" Height="120" VerticalAlignment="Top" Width="230" Canvas.Left="595" Canvas.Top="320"/>
-            <Image x:Name="_1000" Height="170" Canvas.Left="460" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_100" Height="170" Canvas.Left="560" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_10" Height="170" Canvas.Left="645" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_1" Height="170" Canvas.Left="735" Canvas.Top="200" Width="90"/>
+
+            <Image x:Name="_10000" Height="170" Canvas.Left="415" Canvas.Top="200" Width="90"/>
+            <Image x:Name="_1000" Height="170" Canvas.Left="505" Canvas.Top="200" Width="90"/>
+            <Image x:Name="_100" Height="170" Canvas.Left="595" Canvas.Top="200" Width="90"/>
+            <Image x:Name="_10" Height="170" Canvas.Left="685" Canvas.Top="200" Width="90"/>
+            <Image x:Name="_1" Height="170" Canvas.Left="775" Canvas.Top="200" Width="90"/>
+
+            <Image x:Name="m10000" Canvas.Left="860" Canvas.Top="35"/>
+            <Image x:Name="m1000" Canvas.Left="940" Canvas.Top="35"/>
+            <Image x:Name="m100" Canvas.Left="1020" Canvas.Top="35" />
+            <Image x:Name="m10" Canvas.Left="1100" Canvas.Top="35" />
+            <Image x:Name="m1" Canvas.Left="1180" Canvas.Top="35"/>
+
+            <Image x:Name="Home" Width="115" Height="123" Canvas.Left="500" Canvas.Top="440" />
+            <Image x:Name="Replay" Width="124" Height="124" Canvas.Left="720" Canvas.Top="440"/>
+
         </Canvas>
     </Grid>
 </Window>
