--- a/Fruit.xaml
+++ b/Fruit.xaml
@@ -7,26 +7,28 @@
             <Image x:Name="Screen" Height="960" Width="1280" Canvas.Top="10"/>
             <Image x:Name="Background1" Height="960" Width="1365" Canvas.Top="10" Canvas.Left="-35"/>
             <Image x:Name="Background2" Height="960" Width="1365" Canvas.Top="-155" Canvas.Left="-35" />
-            <Image x:Name="SungHwa" Height="360" Canvas.Left="1003" Canvas.Top="580" Width="245"/>
-            <Image x:Name="Hand" Height="110" Canvas.Left="1145" Width="125" Canvas.Top="35"/>
+            <Image x:Name="SungHwa" Canvas.Left="1003" Canvas.Top="580" Width="245" Height="360"/>
+            <Image x:Name="Hand" Height="110" Canvas.Left="1130" Width="125" Canvas.Top="810"/>
 
             <Image x:Name="Ready" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="510" Canvas.Top="315"/>
             <Image x:Name="Go" HorizontalAlignment="Left" Height="120" VerticalAlignment="Top" Width="230" Canvas.Left="595" Canvas.Top="320"/>
 
-            <Image x:Name="_10000" Height="170" Canvas.Left="415" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_1000" Height="170" Canvas.Left="505" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_100" Height="170" Canvas.Left="595" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_10" Height="170" Canvas.Left="685" Canvas.Top="200" Width="90"/>
-            <Image x:Name="_1" Height="170" Canvas.Left="775" Canvas.Top="200" Width="90"/>
+            <Image x:Name="_10000" Height="170" Canvas.Left="415" Canvas.Top="80" Width="90"/>
+            <Image x:Name="_1000" Height="170" Canvas.Left="505" Canvas.Top="80" Width="90"/>
+            <Image x:Name="_100" Height="170" Canvas.Left="595" Canvas.Top="80" Width="90"/>
+            <Image x:Name="_10" Height="170" Canvas.Left="685" Canvas.Top="80" Width="90"/>
+            <Image x:Name="_1" Height="170" Canvas.Left="775" Canvas.Top="80" Width="90"/>
 
-            <Image x:Name="m10000" Canvas.Left="860" Canvas.Top="35"/>
-            <Image x:Name="m1000" Canvas.Left="940" Canvas.Top="35"/>
-            <Image x:Name="m100" Canvas.Left="1020" Canvas.Top="35" />
-            <Image x:Name="m10" Canvas.Left="1100" Canvas.Top="35" />
-            <Image x:Name="m1" Canvas.Left="1180" Canvas.Top="35"/>
+            <Image x:Name="m10000" Canvas.Left="1010" Canvas.Top="35" Height="85" Width="45"/>
+            <Image x:Name="m1000" Canvas.Left="1060" Canvas.Top="35" Height="85" Width="45"/>
+            <Image x:Name="m100" Canvas.Left="1110" Canvas.Top="35" Height="85" Width="45" />
+            <Image x:Name="m10" Canvas.Left="1160" Canvas.Top="35" Height="85" Width="45" />
+            <Image x:Name="m1" Canvas.Left="1210" Canvas.Top="35" Height="85" Width="45"/>
 
-            <Image x:Name="Home" Width="115" Height="123" Canvas.Left="500" Canvas.Top="440" />
-            <Image x:Name="Replay" Width="124" Height="124" Canvas.Left="720" Canvas.Top="440"/>
+            <Image x:Name="Home" Width="115" Height="123" Canvas.Left="505" Canvas.Top="280" />
+            <Image x:Name="Replay" Width="124" Height="124" Canvas.Left="720" Canvas.Top="280"/>
+            <Image x:Name="SungGiF" Height="660" Canvas.Left="505" Canvas.Top="280" Width="475"/>
+
 
         </Canvas>
     </Grid>
