--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,12 +5,12 @@
     <Grid Height="960" Name="User_ViewGrid" Width="1280">
         <Canvas Height="960" HorizontalAlignment="Left" Margin="2,-1,0,0" Name="canvas1" VerticalAlignment="Top" Width="1280">
             <Image Name="Screen" Height="960"  Stretch="Fill" Width="1280" Canvas.Top="10" />
-            <Image Canvas.Left="890" Canvas.Top="606" Height="72" Name="Hand" Stretch="Fill" Width="73" Source="Images/Hand.png" />            
             <Image Name="Jump" Source="Images/bt2_jump.png" Canvas.Left="479" Canvas.Top="404" Height="166"  Width="326" Visibility="Visible"/>
             <Image Name="Fruit" Source="Images/bt3_fruit.png" Canvas.Left="828" Canvas.Top="404" Height="166"  Width="326" Visibility="Visible" />
             <Image Name="Dibi" Source="Images/bt1_db.png" Canvas.Left="120" Canvas.Top="404" Height="166"  Width="326" Visibility="Visible"/>
             <Image Name="Begin" Height="960" Width="1270" Canvas.Left="10"/>
             <TextBox Name="box" Height="165" Canvas.Left="83" TextWrapping="Wrap" Text="TextBox" Canvas.Top="721" FontSize="30" Width="1120"/>
+            <Image Canvas.Left="890" Canvas.Top="606" Height="72" x:Name="Hand" Stretch="Fill" Width="73" Source="Images/Hand.png" />
         </Canvas>
     </Grid>
 </Window>
