--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
             <Image Name="Dibi" Source="bin/Debug/Main/menu1.png" Canvas.Left="120" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible"/>
             <Image Name="Jump" Source="bin/Debug/Main/menu2.png" Canvas.Left="479" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible"/>
             <Image Name="Fruit" Source="bin/Debug/Main/menu3.png" Canvas.Left="828" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible" />
-            <Image Canvas.Left="1116" Canvas.Top="562" Height="72" Name="Hand" Stretch="Fill" Width="73" Source="Images/Hand.png" />
+            <Image Canvas.Left="1116" Canvas.Top="562" Height="45" Name="Hand" Stretch="Fill" Width="45"/>
             <Image Name="Begin" Height="960" Width="1270" Canvas.Left="10"/>
             <TextBox Name="box" Height="105" Canvas.Left="120" TextWrapping="Wrap" Text="TextBox" Canvas.Top="51" FontSize="30" Width="1120"/>
         </Canvas>
