--- a/Dibi.xaml
+++ b/Dibi.xaml
@@ -8,9 +8,10 @@
         <Canvas HorizontalAlignment="Left" Height="920" Margin="0,10,-8,0" VerticalAlignment="Top" Width="1280" Grid.ColumnSpan="3">
             <Image HorizontalAlignment="Left" x:Name="kinect1" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
             <Image HorizontalAlignment="Left" x:Name="bg" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
+            <Image HorizontalAlignment="Left" x:Name="ufo" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
             <Image HorizontalAlignment="Left" x:Name="Soong" Height="158" VerticalAlignment="Top" Width="136" RenderTransformOrigin="0.5,0.5"  Canvas.Left="592" Canvas.Top="356"/>
-            <Image Height="600" Name="monkey" Canvas.Left="700" Canvas.Top="284" Width="490" RenderTransformOrigin="0.5,0.5"/>
-            <Image Name="skip" Height="87" Width="143" Canvas.Left="801" Canvas.Top="198"/>
+            <Image Height="600" Name="monkey" Canvas.Left="780" Canvas.Top="320" Width="490" RenderTransformOrigin="0.5,0.5"/>
+            <Image Name="skip" Height="87" Width="143" Canvas.Left="759" Canvas.Top="283"/>
             <Image Name="Alertimg" Height="210" Width="436" Canvas.Left="34" Canvas.Top="518" />
             <Image Name="score1" Canvas.Left="90" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc1.png"/>
             <Image Name="colon" Canvas.Left="130" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/colon.png"/>
