--- a/Fruit.xaml
+++ b/Fruit.xaml
@@ -9,7 +9,7 @@
             <Image x:Name="Background2" Height="960" Width="1355" Canvas.Top="-155" Canvas.Left="-35" />
             <Image x:Name="SungHwa" Canvas.Left="1003" Canvas.Top="580" Width="245" Height="360"/>
             <Image x:Name="Mou" Canvas.Left="10" Canvas.Top="580" Width="245" Height="360"/>
-            <Image x:Name="Hand" Height="110" Canvas.Left="1130" Width="125" Canvas.Top="810"/>
+            <Image x:Name="hand" Height="110" Canvas.Left="1130" Width="125" Canvas.Top="810"/>
 
             <Image x:Name="Ready" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="510" Canvas.Top="315"/>
             <Image x:Name="Go" HorizontalAlignment="Left" Height="120" VerticalAlignment="Top" Width="230" Canvas.Left="595" Canvas.Top="320"/>
