--- a/Dibi.xaml
+++ b/Dibi.xaml
@@ -1,25 +1,26 @@
 ﻿<Window
-        x:Class="SungJik_SungHwa.Dibi"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
+        xmlns:Properties="clr-namespace:SungJik_SungHwa.Properties"
+        x:Class="SungJik_SungHwa.Dibi"
         Title="Dibi" Height="960" Width="1280" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
         <Canvas HorizontalAlignment="Left" Height="920" Margin="0,10,-8,0" VerticalAlignment="Top" Width="1280" Grid.ColumnSpan="3">
             <Image HorizontalAlignment="Left" x:Name="kinect1" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
             <Image HorizontalAlignment="Left" x:Name="bg" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
-            <Image HorizontalAlignment="Left" x:Name="ufo" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
+            <Image HorizontalAlignment="Left" x:Name="ufo" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="-10"/>
             <Image HorizontalAlignment="Left" x:Name="Soong" Height="158" VerticalAlignment="Top" Width="136" RenderTransformOrigin="0.5,0.5"  Canvas.Left="592" Canvas.Top="356"/>
-            <Image Height="600" Name="monkey" Canvas.Left="780" Canvas.Top="320" Width="490" RenderTransformOrigin="0.5,0.5"/>
-            <Image Name="skip" Height="87" Width="143" Canvas.Left="759" Canvas.Top="283"/>
-            <Image Name="Alertimg" Height="210" Width="436" Canvas.Left="34" Canvas.Top="518" />
-            <Image Name="score1" Canvas.Left="90" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc1.png"/>
-            <Image Name="colon" Canvas.Left="130" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/colon.png"/>
-            <Image Name="score2" Canvas.Left="170" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc4.png"/>
-            <Image Name="notice" Canvas.Left="170" Canvas.Top="10" />
-            <Image Name="home" Height="124" Canvas.Left="440" Canvas.Top="310" Width="124"/>
-            <Image Name="replay" Height="124" Canvas.Left="728" Canvas.Top="310" Width="124"/>
-            <Image Name="hand" Height="45" Canvas.Left="1067" Canvas.Top="413" Width="45"/>
+            <Image Height="600" x:Name="monkey" Canvas.Left="780" Canvas.Top="320" Width="490" RenderTransformOrigin="0.5,0.5"/>
+            <Image x:Name="skip" Height="87" Width="143" Canvas.Left="759" Canvas.Top="283"/>
+            <Image x:Name="Alertimg" Height="210" Width="436" Canvas.Left="34" Canvas.Top="518" />
+            <Image x:Name="score1" Canvas.Left="90" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc1.png"/>
+            <Image x:Name="colon" Canvas.Left="130" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/colon.png"/>
+            <Image x:Name="score2" Canvas.Left="170" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc4.png"/>
+            <Image x:Name="notice" Canvas.Left="170" Canvas.Top="10" />
+            <Image x:Name="home" Height="124" Canvas.Left="440" Canvas.Top="310" Width="124"/>
+            <Image x:Name="replay" Height="124" Canvas.Left="728" Canvas.Top="310" Width="124"/>
+            <Image x:Name="hand" Height="45" Canvas.Left="1067" Canvas.Top="413" Width="45"/>
         </Canvas>
         <!--        <MediaElement Name="video" HorizontalAlignment="Left" Height="287" VerticalAlignment="Top"  Width="507"  Grid.Column="2" Margin="217,563,0,0" LoadedBehavior="Manual" /> -->
 
