--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,12 +5,13 @@
     <Grid Height="960" Name="User_ViewGrid" Width="1280">
         <Canvas Height="960" HorizontalAlignment="Left" Margin="2,-1,0,0" Name="canvas1" VerticalAlignment="Top" Width="1280">
             <Image Name="Screen" Height="960"  Stretch="Fill" Width="1280" Canvas.Top="10" />
-            <Image Name="Dibi" Source="bin/Debug/Main/menu1.png" Canvas.Left="120" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible"/>
-            <Image Name="Jump" Source="bin/Debug/Main/menu2.png" Canvas.Left="479" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible"/>
+            <Image Name="Guide" Canvas.Left="289" Canvas.Top="100" Height="127"  Width="700" Visibility="Visible"/>
+            <Image Name="Dibi" Source="bin/Debug/Main/menu1.png" Canvas.Left="200" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible"/>
+            <Image Name="Jump" Source="bin/Debug/Main/menu2.png" Canvas.Left="515" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible"/>
             <Image Name="Fruit" Source="bin/Debug/Main/menu3.png" Canvas.Left="828" Canvas.Top="404" Height="364"  Width="240" Visibility="Visible" />
             <Image Canvas.Left="1116" Canvas.Top="562" Height="45" Name="Hand" Stretch="Fill" Width="45"/>
-            <Image Name="Begin" Height="960" Width="1270" Canvas.Left="10"/>
-            <TextBox Name="box" Height="105" Canvas.Left="120" TextWrapping="Wrap" Text="TextBox" Canvas.Top="51" FontSize="30" Width="1120"/>
+            <Image Name="Begin" Height="960" Width="1270" Canvas.Left="0" Canvas.Top="0"/>
+            <TextBox Name="box" Height="105" Canvas.Left="120" TextWrapping="Wrap" Text="TextBox" Canvas.Top="51" FontSize="30" Width="1120" Visibility="Hidden"/>
         </Canvas>
     </Grid>
 </Window>
