--- a/Dibi.xaml
+++ b/Dibi.xaml
@@ -4,25 +4,24 @@
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:Properties="clr-namespace:SungJik_SungHwa.Properties"
         x:Class="SungJik_SungHwa.Dibi"
-        Title="Dibi" Height="960" Width="1280" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Dibi" Height="768" Width="1024" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
-        <Canvas HorizontalAlignment="Left" Height="920" Margin="0,10,-8,0" VerticalAlignment="Top" Width="1280" Grid.ColumnSpan="3">
-            <Image HorizontalAlignment="Left" x:Name="kinect1" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
-            <Image HorizontalAlignment="Left" x:Name="bg" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="20"/>
-            <Image HorizontalAlignment="Left" x:Name="ufo" Height="920" Width="1280" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="-10"/>
-            <Image HorizontalAlignment="Left" x:Name="Soong" Height="158" VerticalAlignment="Top" Width="136" RenderTransformOrigin="0.5,0.5"  Canvas.Left="592" Canvas.Top="356"/>
-            <Image Height="600" x:Name="monkey" Canvas.Left="780" Canvas.Top="320" Width="490" RenderTransformOrigin="0.5,0.5"/>
-            <Image x:Name="skip" Height="87" Width="143" Canvas.Left="759" Canvas.Top="283"/>
-            <Image x:Name="Alertimg" Height="210" Width="436" Canvas.Left="34" Canvas.Top="518" />
-            <Image x:Name="score1" Canvas.Left="90" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc1.png"/>
-            <Image x:Name="colon" Canvas.Left="130" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/colon.png"/>
-            <Image x:Name="score2" Canvas.Left="170" Canvas.Top="50" Height="101" Width="40" Source="bin/Debug/dibi/nc4.png"/>
-            <Image x:Name="notice" Canvas.Left="170" Canvas.Top="10" />
-            <Image x:Name="home" Height="124" Canvas.Left="440" Canvas.Top="310" Width="124"/>
-            <Image x:Name="replay" Height="124" Canvas.Left="728" Canvas.Top="310" Width="124"/>
-            <Image x:Name="hand" Height="45" Canvas.Left="1067" Canvas.Top="413" Width="45"/>
+        <Canvas HorizontalAlignment="Left" Height="768" Margin="0,10,-8,0" VerticalAlignment="Top" Width="1024" Grid.ColumnSpan="3">
+            <Image HorizontalAlignment="Left" x:Name="kinect1" Height="768" Width="1024" Stretch="Fill"  VerticalAlignment="Top" />
+            <Image HorizontalAlignment="Left" x:Name="bg" Height="768" Width="1024" Stretch="Fill"  VerticalAlignment="Top" />
+            <Image HorizontalAlignment="Left" x:Name="ufo" Height="768" Width="1024" Stretch="Fill"  VerticalAlignment="Top" Canvas.Top="-10"/>
+            <Image Height="600" x:Name="monkey" Canvas.Left="624" Canvas.Top="256" Width="392" RenderTransformOrigin="0.5,0.5"/>
+            <Image x:Name="skip" Height="87" Width="114" Canvas.Left="640" Canvas.Top="248"/>
+            <Image x:Name="Alertimg" Height="168" Width="349" Canvas.Left="27" Canvas.Top="414" />
+            <Image x:Name="score1" Canvas.Left="81" Canvas.Top="40" Height="80" Width="32" Source="bin/Debug/dibi/nc1.png"/>
+            <Image x:Name="colon" Canvas.Left="104" Canvas.Top="40" Height="80" Width="32" Source="bin/Debug/dibi/colon.png"/>
+            <Image x:Name="score2" Canvas.Left="136" Canvas.Top="40" Height="80" Width="32" Source="bin/Debug/dibi/nc4.png"/>
+            <Image x:Name="notice" Canvas.Left="136" Canvas.Top="10" />
+            <Image x:Name="home" Height="99" Canvas.Left="352" Canvas.Top="248" Width="99"/>
+            <Image x:Name="replay" Height="99" Canvas.Left="582" Canvas.Top="248" Width="99"/>
+            <Image x:Name="hand" Height="36" Canvas.Left="853" Canvas.Top="330.4" Width="36"/>
         </Canvas>
-        <!--        <MediaElement Name="video" HorizontalAlignment="Left" Height="287" VerticalAlignment="Top"  Width="507"  Grid.Column="2" Margin="217,563,0,0" LoadedBehavior="Manual" /> -->
+        <!--        <MediaElement Name="video" HorizontalAlignment="Left" Height="287" VerticalAlignment="Top"  Width="407"  Grid.Column="2" Margin="217,563,0,0" LoadedBehavior="Manual" /> -->
 
     </Grid>
 </Window>
